--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.19.0",
+    "framer-motion": "^9.0.0",
     "next": "12.3.0",
     "node-mailjet": "^5.1.1",
     "nuka-carousel": "^5.4.0",
