--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
 [[plugins]]
 package = "@netlify/plugin-nextjs"
 
-package = "netlify-plugin-cloudinary"
+[[plugins]]
+  package = "netlify-plugin-cloudinary"
+
   [plugins.inputs]
   cloudName = "dafkp3wyr"
   deliveryType = "upload"
