--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-mailjet": "^5.1.1",
     "nuka-carousel": "^5.4.0",
     "react": "18.2.0",
+    "react-calendly": "^4.1.1",
     "react-compare-slider": "^2.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
