--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.17.1",
+    "contentful": "^10.4.2",
     "framer-motion": "^9.0.0",
     "next": "12.3.0",
     "next-cloudinary": "^4.0.0",
@@ -26,6 +28,7 @@
     "use-mailchimp-form": "^3.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
