--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "getContentfulEnvironment.js"],
   "exclude": ["node_modules"]
 }
